Bug 336122 - Impossible to colour-pick outside of original image when in wrap-around mode
Summary: Impossible to colour-pick outside of original image when in wrap-around mode
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 2.8.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL: http://i.imgur.com/gtRFHor.png
Keywords:
: 336670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-06-12 11:50 UTC by Ren
Modified: 2016-08-23 16:41 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ren 2014-06-12 11:50:28 UTC
When in Wrap Around Mode, if the user tries to colour-pick one of the images generated alongside the original image, they obtain nothing. This is a bit cumbersome as one might use colour-pick a lot to paint over the edge of an image to create a seamless texture and it's less intuitive to go and pick on the opposite side of the image where the original is (see image - I was trying to paint at the edge of the image).

Reproducible: Always

Steps to Reproduce:
1. Open an image that you want to turn into a texture;
2. Start Wrap-Around mode;
3. Try to colour-pick outside of where the original image is.
Actual Results:  
If one isn't picking where the original image is, no colour is picked.

Expected Results:  
If there is an image, even though it's generated by Krita to wrap around, it should be possible to pick its colour.

Open GL was activated and I was using updated drivers for my graphics card.
Comment 1 Halla Rempt 2014-06-17 20:26:22 UTC
Yes, I can confirm... It shouldn't be too hard to fix, I guess...
Comment 2 michaelknubben 2014-06-19 13:55:44 UTC
Came here to report this, so: I can confirm. It always picks black outside of the bounds of the original image.

I'm on 2.9 Pre-Alpha (git 294bc78)
Comment 3 Halla Rempt 2014-06-25 08:40:14 UTC
*** Bug 336670 has been marked as a duplicate of this bug. ***
Comment 4 Dmitry Kazakov 2015-08-20 14:21:43 UTC
Git commit cdd7a6162cae1a0c9231a47956bfbd55a2fa53aa by Dmitry Kazakov.
Committed on 20/08/2015 at 14:21.
Pushed by dkazakov into branch 'calligra/2.9'.

[FEATURE] Make color picking with shortcuts work in Wrap Around mode

CC:kimageshop@kde.org

M  +19   -3    krita/plugins/tools/defaulttools/kis_tool_colorpicker.cc
M  +1    -1    krita/ui/tool/kis_tool_paint.cc
M  +17   -0    krita/ui/tool/kis_tool_utils.cpp
M  +7    -0    krita/ui/tool/kis_tool_utils.h

http://commits.kde.org/calligra/cdd7a6162cae1a0c9231a47956bfbd55a2fa53aa
Comment 5 David REVOY 2016-05-31 17:01:15 UTC
I reopen this one as a regression in 3.0, it was confirmed on Linux and Windows during the live-stream of Gdquest.
Comment 6 Raghavendra kamath 2016-06-09 07:51:04 UTC
I can confirm this , i also experience this issue on 3.0
Comment 7 Halla Rempt 2016-08-23 16:41:57 UTC
Fixed again :-)