[FEATURE] Make color picking with shortcuts work in Wrap Around mode

CC:kimageshop@kde.org
BUG:336122